all user data serialized/de properly, login ui changed a bit

--- a/Static GUI/CSE201_v1/src/address/view/StudentLogin.fxml
+++ b/Static GUI/CSE201_v1/src/address/view/StudentLogin.fxml
@@ -9,8 +9,10 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -23,27 +25,54 @@
                <content>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <VBox alignment="TOP_CENTER" prefHeight="681.0" prefWidth="960.0">
+                        <VBox alignment="TOP_CENTER" prefHeight="681.0" prefWidth="960.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <VBox prefHeight="214.0" prefWidth="960.0">
+                              <Pane prefHeight="203.0" prefWidth="960.0" style="-fx-background-color: #ccd5e0;">
+                                 <effect>
+                                    <DropShadow />
+                                 </effect>
                                  <children>
-                                    <HBox prefHeight="36.0" prefWidth="433.0">
+                                    <VBox layoutX="1.0" layoutY="-1.0" prefHeight="207.0" prefWidth="960.0">
                                        <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Current User Details" wrappingWidth="434.13670349121094">
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                             <font>
-                                                <Font size="18.0" />
-                                             </font>
-                                          </Text>
-                                       </children>
-                                    </HBox>
-                                    <HBox layoutX="10.0" layoutY="93.0" prefHeight="52.0" prefWidth="597.0">
-                                       <children>
+                                          <HBox prefHeight="36.0" prefWidth="433.0">
+                                             <children>
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Current User Details" wrappingWidth="434.13670349121094">
+                                                   <HBox.margin>
+                                                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                   </HBox.margin>
+                                                   <font>
+                                                      <Font size="18.0" />
+                                                   </font>
+                                                </Text>
+                                             </children>
+                                          </HBox>
+                                          <HBox layoutX="10.0" layoutY="93.0" prefHeight="52.0" prefWidth="597.0">
+                                             <children>
+                                                <HBox prefHeight="65.0" prefWidth="960.0">
+                                                   <children>
+                                                      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" wrappingWidth="199.4700469970703">
+                                                         <font>
+                                                            <Font size="16.0" />
+                                                         </font>
+                                                         <HBox.margin>
+                                                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                         </HBox.margin>
+                                                      </Text>
+                                                      <Text fx:id="homePageName" strokeType="OUTSIDE" strokeWidth="0.0" text="Dummy" wrappingWidth="310.13670349121094">
+                                                         <font>
+                                                            <Font size="20.0" />
+                                                         </font>
+                                                         <HBox.margin>
+                                                            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                                         </HBox.margin>
+                                                      </Text>
+                                                   </children>
+                                                </HBox>
+                                             </children>
+                                          </HBox>
                                           <HBox prefHeight="65.0" prefWidth="960.0">
                                              <children>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" wrappingWidth="199.4700469970703">
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email ID" wrappingWidth="199.4700469970703">
                                                    <font>
                                                       <Font size="16.0" />
                                                    </font>
@@ -51,15 +80,7 @@
                                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                    </HBox.margin>
                                                 </Text>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Dummy" wrappingWidth="310.13670349121094">
-                                                   <font>
-                                                      <Font size="20.0" />
-                                                   </font>
-                                                   <HBox.margin>
-                                                      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                   </HBox.margin>
-                                                </Text>
-                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Dummy" wrappingWidth="275.4700469970703">
+                                                <Text fx:id="homepageEmail" strokeType="OUTSIDE" strokeWidth="0.0" text="Dummy" wrappingWidth="466.13673400878906">
                                                    <font>
                                                       <Font size="20.0" />
                                                    </font>
@@ -69,118 +90,42 @@
                                                 </Text>
                                              </children>
                                           </HBox>
-                                       </children>
-                                    </HBox>
-                                    <HBox prefHeight="65.0" prefWidth="960.0">
-                                       <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Email ID" wrappingWidth="199.4700469970703">
-                                             <font>
-                                                <Font size="16.0" />
-                                             </font>
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </Text>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Dummy" wrappingWidth="466.13673400878906">
-                                             <font>
-                                                <Font size="20.0" />
-                                             </font>
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </Text>
-                                       </children>
-                                    </HBox>
-                                 </children>
-                              </VBox>
-                              <VBox prefHeight="232.0" prefWidth="940.0">
-                                 <children>
-                                    <HBox prefHeight="36.0" prefWidth="433.0">
-                                       <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Change User Details" wrappingWidth="434.13670349121094">
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                             <font>
-                                                <Font size="18.0" />
-                                             </font>
-                                          </Text>
-                                       </children>
-                                    </HBox>
-                                    <HBox prefHeight="64.0" prefWidth="940.0">
-                                       <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name" wrappingWidth="199.4700469970703">
-                                             <font>
-                                                <Font size="16.0" />
-                                             </font>
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </Text>
                                           <HBox prefHeight="65.0" prefWidth="960.0">
                                              <children>
-                                                <TextField prefHeight="44.0" prefWidth="349.0" promptText="First Name">
+                                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Username" wrappingWidth="199.4700469970703">
+                                                   <font>
+                                                      <Font size="16.0" />
+                                                   </font>
                                                    <HBox.margin>
                                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                    </HBox.margin>
-                                                </TextField>
-                                                <TextField prefHeight="48.0" prefWidth="363.0" promptText="Last Name">
+                                                </Text>
+                                                <Text fx:id="homepageUsername" strokeType="OUTSIDE" strokeWidth="0.0" text="Dummy" wrappingWidth="310.13670349121094">
+                                                   <font>
+                                                      <Font size="20.0" />
+                                                   </font>
                                                    <HBox.margin>
                                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                    </HBox.margin>
-                                                </TextField>
+                                                </Text>
                                              </children>
                                           </HBox>
                                        </children>
-                                    </HBox>
-                                    <HBox prefHeight="37.0" prefWidth="433.0">
-                                       <children>
-                                          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Password" wrappingWidth="199.4700469970703">
-                                             <font>
-                                                <Font size="16.0" />
-                                             </font>
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </Text>
-                                       </children>
-                                    </HBox>
-                                    <HBox prefHeight="65.0" prefWidth="940.0">
-                                       <children>
-                                          <TextField prefHeight="44.0" prefWidth="358.0" promptText="Old Password">
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </TextField>
-                                          <TextField prefHeight="44.0" prefWidth="330.0" promptText="New Password">
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </TextField>
-                                          <TextField prefHeight="45.0" prefWidth="371.0" promptText="Re-enter Password">
-                                             <HBox.margin>
-                                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                             </HBox.margin>
-                                          </TextField>
-                                       </children>
-                                    </HBox>
+                                    </VBox>
                                  </children>
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                 </VBox.margin>
-                              </VBox>
-                              <VBox prefHeight="61.0" prefWidth="960.0">
+                              </Pane>
+                              <HBox prefHeight="136.0" prefWidth="960.0">
                                  <children>
-                                    <Button mnemonicParsing="false" onAction="#switchToLoginPage" prefHeight="49.0" prefWidth="168.0" text="Logout">
-                                       <VBox.margin>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </VBox.margin>
+                                    <Button mnemonicParsing="false" onAction="#switchToLoginPage" prefHeight="64.0" prefWidth="198.0" text="Logout">
+                                       <HBox.margin>
+                                          <Insets bottom="20.0" left="20.0" right="20.0" top="30.0" />
+                                       </HBox.margin>
                                        <font>
-                                          <Font size="20.0" />
+                                          <Font size="19.0" />
                                        </font>
                                     </Button>
                                  </children>
-                              </VBox>
+                              </HBox>
                            </children>
                         </VBox>
                      </children>
@@ -336,7 +281,7 @@
                   </AnchorPane>
                </content>
             </Tab>
-            <Tab text="Current Courses">
+            <Tab text="All Courses">
                <content>
                   <AnchorPane>
                      <children>
